handle access denied & fix vertical scrollbar

--- a/source/app/home/_home.scss
+++ b/source/app/home/_home.scss
@@ -56,6 +56,11 @@
       vertical-align: middle;
     }
 
+    i {
+      display: block;
+      margin-top: -20px;
+    }
+
     h1 {
       color: $c_white;
       font-size: 2.6em;
